--- a/WyGood.StepOut/WyGood.StepOut.csproj
+++ b/WyGood.StepOut/WyGood.StepOut.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Fitbit">
+      <HintPath>..\..\Fitbit.NET\Fitbit\bin\Debug\Fitbit.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
